// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategorySelect /> should list the different categories 1`] = `
<div>
  <div
    aria-expanded="false"
    class="ui selection dropdown"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-live="polite"
      class="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
    >
      <div
        aria-checked="false"
        aria-selected="true"
        class="selected item"
        role="option"
        style="pointer-events: all;"
      >
        <span
          class="text"
        >
          Kaikki juomatyypit
        </span>
      </div>
      <div
        aria-checked="false"
        aria-selected="false"
        class="item"
        role="option"
        style="pointer-events: all;"
      >
        <span
          class="text"
        >
          tyyppi2
        </span>
      </div>
      <div
        aria-checked="false"
        aria-selected="false"
        class="item"
        role="option"
        style="pointer-events: all;"
      >
        <span
          class="text"
        >
          tyyppi3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CategorySelect /> should show an empty select when loading 1`] = `
<div>
  <div
    aria-expanded="false"
    class="ui selection dropdown"
    role="listbox"
    tabindex="0"
  >
    <div
      aria-live="polite"
      class="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
    />
  </div>
</div>
`;

exports[`<CategorySelect /> should show an empty select when loading 2`] = `<div />`;
